--- a/WebApplication3tierApp/WebApplication3tierApp/appsettings.json
+++ b/WebApplication3tierApp/WebApplication3tierApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\sqlexpress;Database=teamA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=PBS_HUB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
